[gd_scene load_steps=3 format=1]

[ext_resource path="res://Scenes/Events/death_line.gd" type="Script" id=1]

[sub_resource type="LineShape2D" id=1]

custom_solver_bias = 0.0
normal = Vector2( 0, -1 )
d = 0.0

[node name="death_line" type="Area2D"]

editor/display_folded = true
transform/pos = Vector2( 288, -192 )
transform/scale = Vector2( 83, 1 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 0.798988, 0, 0, 1, 12.9332, -32 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 0.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 2
collision/mask = 2
script/script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 12.9332, -32 )
transform/scale = Vector2( 0.798988, 1 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[connection signal="area_enter" from="." to="." method="_on_death_line_area_enter"]

[connection signal="area_exit" from="." to="." method="_on_death_line_area_exit"]

[connection signal="body_enter" from="." to="." method="_on_DeathLine_body_enter"]


